--- a/src/components/data/project-data.json
+++ b/src/components/data/project-data.json
@@ -19,5 +19,26 @@
         "image": "https://picsum.photos/seed/picsum/200/200",
         "deployedLink": "https://www.example.com/project3",
         "githubLink": "https://github.com/username/project3"
+    },
+    {
+        "id": 4,
+        "title": "Project 4",
+        "image": "https://picsum.photos/seed/picsum/200/200",
+        "deployedLink": "https://www.example.com/project1",
+        "githubLink": "https://github.com/username/project1"
+    },
+    {
+        "id": 5,
+        "title": "Project 5",
+        "image": "https://picsum.photos/seed/picsum/200/200",
+        "deployedLink": "https://www.example.com/project2",
+        "githubLink": "https://github.com/username/project2"
+    },
+    {
+        "id": 6,
+        "title": "Project 6",
+        "image": "https://picsum.photos/seed/picsum/200/200",
+        "deployedLink": "https://www.example.com/project3",
+        "githubLink": "https://github.com/username/project3"
     }
 ]
