--- a/src/components/data/project-data.json
+++ b/src/components/data/project-data.json
@@ -1,44 +1,44 @@
 [
     {
         "id": 1,
-        "title": "Project 1",
+        "title": "Team profile generator",
         "image": "/images/project-01.jpg",
-        "deployedLink": "https://www.example.com/project1",
-        "githubLink": "https://github.com/username/project1"
+        "deployedLink": "https://github.com/mchinojo/12Team-Profile-Generator/blob/main/starter/output/sample.html",
+        "githubLink": "https://github.com/mchinojo/12Team-Profile-Generator"
     },
     {
         "id": 2,
-        "title": "Project 2",
+        "title": "Weather dashboard",
         "image": "/images/project-02.jpg",
-        "deployedLink": "https://www.example.com/project2",
-        "githubLink": "https://github.com/username/project2"
+        "deployedLink": "https://mchinojo.github.io/8Weather-Dashboard/",
+        "githubLink": "https://github.com/mchinojo/8Weather-Dashboard"
     },
     {
         "id": 3,
-        "title": "Project 3",
+        "title": "Password generator",
         "image": "/images/project-03.jpg",
-        "deployedLink": "https://www.example.com/project3",
-        "githubLink": "https://github.com/username/project3"
+        "deployedLink": "https://mchinojo.github.io/5Password-Generator/",
+        "githubLink": "https://github.com/mchinojo/5Password-Generator"
     },
     {
         "id": 4,
-        "title": "Project 4",
+        "title": "Miscellaneous timed quiz",
         "image": "/images/project-04.jpg",
-        "deployedLink": "https://www.example.com/project1",
-        "githubLink": "https://github.com/username/project1"
+        "deployedLink": "https://mchinojo.github.io/6Miscellaneous-Quiz/",
+        "githubLink": "https://github.com/mchinojo/6Miscellaneous-Quiz"
     },
     {
         "id": 5,
-        "title": "Project 5",
+        "title": "Work day scheduler",
         "image": "/images/project-05.jpg",
-        "deployedLink": "https://www.example.com/project2",
-        "githubLink": "https://github.com/username/project2"
+        "deployedLink": "https://mchinojo.github.io/7Work-Day-Scheduler/",
+        "githubLink": "https://github.com/mchinojo/7Work-Day-Scheduler"
     },
     {
         "id": 6,
-        "title": "Project 6",
+        "title": "Front-end application",
         "image": "/images/project-06.jpg",
-        "deployedLink": "https://www.example.com/project3",
-        "githubLink": "https://github.com/username/project3"
+        "deployedLink": "https://asherbeck10.github.io/Bites-and-Booze/",
+        "githubLink": "https://github.com/Asherbeck10/Bites-and-Booze"
     }
 ]
