--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "test",
   "version": "0.1.0",
-  "homepage": "https://mchinojo.github.io/13React-Portfolio/#/13React-Portfolio",
+  "homepage": "https://mchinojo.github.io/13React-Portfolio",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
